# basic-algorithm

./: CMakeLists.txt  CMakeLists.windows.txt  README.md  sonar-project.properties
arithmetic/: check-strong-password.h  main.c  main.h
arithmetic/factor-sum/: factor-sum.c
arithmetic/is-prime/: is-prime.c
counting/: main.c  main.h
counting/characters-rearrangement/: characters-rearrangement.c
counting/check-equal-frequency/: check-equal-frequency.c
counting/common-character-count/: common-character-count.c
counting/different-squares/: different-squares.c
counting/different-substrings-trie/: different-substrings-trie.c
counting/different-symbols-naive/: different-symbols-naive.c
counting/different-values-in-multiplication-table-2/: different-values-in-multiplication-table-2.c
counting/is-pangram/: is-pangram.c
geometry/: main.c
graph/: main.c
lib/: common-functions.h
matrix/: main.c  main.h
matrix/bishop-and-pawn/: bishop-and-pawn.c
matrix/bishop-diagonal/: bishop-diagonal.c
matrix/chess-board-cell-color/: chess-board-cell-color.c
matrix/chess-knight/: chess-knight.c
matrix/find-path/: find-path.c
matrix/spiral-numbers/: spiral-numbers.c
menu/: counting.menu.txt  matrix.menu.txt
number-sequence/: main.c
searching/: main.c
sorting/: main.c
sorting/sort-array/: sort-array-merge-sort.c
string-handling/: amend-the-sentence.h  main.c  main.h
string-handling/amend-the-sentence/: amend-the-sentence.c
string-handling/check-palindrome/: check-palindrome.c
string-handling/check-strong-password/: check-strong-password.c
string-handling/format-string/: format-string.c
string-handling/is-tandem-repeat/: is-tandem-repeat.c
string-handling/line-encoding/: line-encoding.c
string-handling/question-correction/: question-correction.c
string-handling/strings-crossover/: strings-crossover.c
string-handling/truncate-string/: truncate-string.c
